--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,22 +8,12 @@
   transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+
+ion-card{
+  max-width: 300px;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-item.ion-activated{
+  cursor: pointer;
 }
 
 ion-content ion-toolbar {
