--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,8 +32,8 @@
       </ion-item>
 
       <ion-item>
-        <ion-icon name="wine" slot="start"></ion-icon>
-        <ion-label>Card Link Item 2</ion-label>
+        <ion-icon (click)="takePic()" name="camera" slot="start" class="ion-activated"></ion-icon>
+        <ion-label>Take picture</ion-label>
       </ion-item>
 
       <ion-item>
@@ -45,6 +45,9 @@
         <ion-icon name="walk" slot="start"></ion-icon>
         <ion-label>Card Button Item 2</ion-label>
       </ion-item>
+    </ion-card>
+    <ion-card *ngIf="imgData">
+      <img [src]="imgData">
     </ion-card>
   </div>
 </ion-content>
