--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,12 +33,12 @@
 
       <ion-item>
         <ion-icon (click)="takePic()" name="camera" slot="start" class="ion-activated"></ion-icon>
-        <ion-label>Take picture</ion-label>
+        <ion-label> Take picture</ion-label>
       </ion-item>
 
       <ion-item>
-        <ion-icon name="warning" slot="start"></ion-icon>
-        <ion-label>Card Button Item 1 activated</ion-label>
+        <ion-icon (click)="takePos()" name="location-outline" slot="start" class="ion-activated"></ion-icon>
+        <ion-label>Your position</ion-label>
       </ion-item>
 
       <ion-item>
@@ -49,5 +49,32 @@
     <ion-card *ngIf="imgData">
       <img [src]="imgData">
     </ion-card>
+    <ion-grid *ngIf="longitude && latitude" >
+      <ion-row><ion-label>Vos positions</ion-label></ion-row>
+      <ion-row>
+        <ion-col>
+          <div>
+            <ion-label>Latitude</ion-label>
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            <ion-label>Longitude</ion-label>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div>
+            {{latitude}}
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            {{longitude}}
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
