--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,13 +31,13 @@
         <ion-label>Fire Alert</ion-label>
       </ion-item>
 
-      <ion-item>
-        <ion-icon (click)="takePic()" name="camera" slot="start" class="ion-activated"></ion-icon>
-        <ion-label> Take picture</ion-label>
+      <ion-item (click)="takePic()"  class="ion-activated">
+        <ion-icon name="camera" slot="start" ></ion-icon>
+        <ion-label>Take picture</ion-label>
       </ion-item>
 
-      <ion-item>
-        <ion-icon (click)="takePos()" name="location-outline" slot="start" class="ion-activated"></ion-icon>
+      <ion-item (click)="takePos()" class="ion-activated">
+        <ion-icon  name="location-outline" slot="start" ></ion-icon>
         <ion-label>Your position</ion-label>
       </ion-item>
 
@@ -50,7 +50,7 @@
       <img [src]="imgData">
     </ion-card>
     <ion-grid *ngIf="longitude && latitude" >
-      <ion-row><ion-label>Vos positions</ion-label></ion-row>
+      <ion-row><ion-col><ion-label>Vos positions</ion-label></ion-col></ion-row>
       <ion-row>
         <ion-col>
           <div>
