--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -49,29 +49,29 @@
     <ion-card *ngIf="imgData">
       <img [src]="imgData">
     </ion-card>
-    <ion-grid *ngIf="longitude && latitude" >
-      <ion-row><ion-col><ion-label>Vos positions</ion-label></ion-col></ion-row>
+    <ion-grid *ngIf="Pos.length>0"  >
+      <ion-row ><ion-col size="10"><ion-label>Vos positions</ion-label></ion-col></ion-row>
       <ion-row>
-        <ion-col>
+        <ion-col size="5">
           <div>
             <ion-label>Latitude</ion-label>
           </div>
         </ion-col>
-        <ion-col>
+        <ion-col size="5">
           <div>
             <ion-label>Longitude</ion-label>
           </div>
         </ion-col>
       </ion-row>
-      <ion-row>
-        <ion-col>
+      <ion-row *ngFor="let pos of Pos">
+        <ion-col size="5">
           <div>
-            {{latitude}}
+            {{pos.latitude}}
           </div>
         </ion-col>
-        <ion-col>
+        <ion-col size="5">
           <div>
-            {{longitude}}
+            {{pos.longitude}}
           </div>
         </ion-col>
       </ion-row>
