--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -41,9 +41,9 @@
         <ion-label>Your position</ion-label>
       </ion-item>
 
-      <ion-item>
-        <ion-icon name="walk" slot="start"></ion-icon>
-        <ion-label>Card Button Item 2</ion-label>
+      <ion-item (click)="Notif()" class="ion-activated">
+        <ion-icon name="bulb" slot="start"></ion-icon>
+        <ion-label>Send Notification</ion-label>
       </ion-item>
     </ion-card>
     <ion-card *ngIf="imgData">
