--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,8 +42,12 @@
       </ion-item>
 
       <ion-item (click)="Notif()" class="ion-activated">
-        <ion-icon name="bulb" slot="start"></ion-icon>
-        <ion-label>Send Notification</ion-label>
+      <ion-icon name="bulb" slot="start"></ion-icon>
+      <ion-label>Send Notification</ion-label>
+    </ion-item>
+      <ion-item routerLink="/camera" routerDirection="root" class="ion-activated">
+        <ion-icon name="videocam" slot="start"></ion-icon>
+        <ion-label>Camera Preview</ion-label>
       </ion-item>
     </ion-card>
     <ion-card *ngIf="imgData">
