--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title >
-      Blank
+      TP Ionic
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -16,13 +16,11 @@
   <div id="container">
     <ion-card>
       <ion-card-header>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        <ion-card-title>Card Title</ion-card-title>
+        <ion-card-title>Ionic APP</ion-card-title>
       </ion-card-header>
 
       <ion-card-content>
-        Keep close to Nature's heart... and break clear away, once in awhile,
-        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+       Let's Start The Game!
       </ion-card-content>
     </ion-card>
     <ion-card>
